--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="opi-texts text-container t-left">
             <h1 class="text-header">OPI Professional</h1>
             <div class="text-desc">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam a nostrum officia, dolore placeat temporibus iste eum nulla consequuntur culpa.</p>
+                <p>OPI - die weltweit führende Marke im Profil-Bereich besticht durch eine einzigartige Farbvielfalt und Premiumqualität</p>
 
             </div>
         </div>
@@ -23,8 +23,8 @@
         <div class="vinoble-texts text-container t-right">
             <h1 class="text-header">Vinoble cosmetics</h1>
             <div class="text-desc">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit eaque esse doloremque beatae aliquam ipsam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus.</p>
+                <p>Die VINOBLE COSMETICS [c]lean luxury Produkte verbinden natürliche Inhaltsstoffe, Minimalismus, Nachhaltigkeit und Wirksamkeit</p>
+                <p>Das ist unser Versprechen – an Ihre Haut und die Umwelt</p>
             </div>
         </div>
 
@@ -37,8 +37,8 @@
         <div class="desisea-texts  text-container t-left">
             <h1 class="text-header">Delisea</h1>
             <div class="text-desc">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur suscipit neque laboriosam quam ullam nihil ex numquam esse rerum asperiores.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus?</p>
+                <p>NACHHALTIG, VEGAN, VERANTWORTUNGSBEWUSST.</p>
+                <p>Eine neue Generation von Parfums, die eine konsequente Verantwortung für die Natur mit einem langanhaltenden, frischen Dufterlebnis verbinden! Die mediterran inspirierten Eau de Parfums bieten eine tierversuchsfreie Duftauswahl aus natürlichen Inhaltsstoffen pflanzlichen Ursprungs. </p>
             </div>
         </div>
     </section>
