--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <p>OPI - die weltweit führende Marke im Profil-Bereich besticht durch eine einzigartige Farbvielfalt und Premiumqualität</p>
 
             </div>
+            <button class="opi-button cta-btn">Jetzt entdecken</button>
+
         </div>
   
 
@@ -26,6 +28,8 @@
                 <p>Die VINOBLE COSMETICS [c]lean luxury Produkte verbinden natürliche Inhaltsstoffe, Minimalismus, Nachhaltigkeit und Wirksamkeit</p>
                 <p>Das ist unser Versprechen – an Ihre Haut und die Umwelt</p>
             </div>
+
+            <button class="vinoble-button cta-btn">Jetzt entdecken</button>
         </div>
 
         <img src="./imgs/vinoble.jpg" alt="" class="vinoble-img product-image">
@@ -40,6 +44,8 @@
                 <p>NACHHALTIG, VEGAN, VERANTWORTUNGSBEWUSST.</p>
                 <p>Eine neue Generation von Parfums, die eine konsequente Verantwortung für die Natur mit einem langanhaltenden, frischen Dufterlebnis verbinden! Die mediterran inspirierten Eau de Parfums bieten eine tierversuchsfreie Duftauswahl aus natürlichen Inhaltsstoffen pflanzlichen Ursprungs. </p>
             </div>
+            <button class="delisea-button cta-btn">Jetzt entdecken</button>
+
         </div>
     </section>
 </body>
